# Counterfactual_Data_Synthesis

./: README.md  main.py  pyproject.toml  requirements.txt
config/: controller.yaml  default.yaml  perturbations.yaml  scenario_filter_full.yaml  scenario_filter_light.yaml
doc/: Project_Structure_and_Roadmap.md  Vector-based Counterfactual Data Generation System for Autonomous Driving.md  nuplan_data_inventory.md  nuplan_demo.md
scripts/: nuplan2xodr_basic.py.py
src/cfdg/control/: idm.py  pid.py
src/cfdg/ingest/: scene_loader.py
src/cfdg/io/: writer.py
src/cfdg/label/: labeler.py
src/cfdg/map/: map_api.py
src/cfdg/metrics/: manifest.py
src/cfdg/perturb/: perturbation.py
src/cfdg/sim/: bicycle_model.py  rollout.py
src/cfdg/utils/: config.py
src/counterfactual_data_synthesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_control.py  test_io.py  test_label.py  test_map.py  test_perturb.py  test_sim.py
tools/: build_manifest.py  export_debug_case.py  run_pipeline.py  visualize_gif.py  visualize_gif_hdmap.py
